# seis-jarnethys-martijnsnoeks

./: 00-index.markdown  01-wasm-vm.md  02-wasm-compiler.md  03-cloudflare.md  04-paper.md  CMakeLists.txt  Task 1.docx  Task 2.docx  Task 3.docx  Task.docx  _config.yml  index.md  post-1.md  taak0.md  task.docx
ByteStream/: bytestream.cpp  bytestream.h  number
_includes/: footer.html  header.html
assets/: main.scss
assets/css/: style.scss  styles.scss
bytestream/: bytestream.h  hex_number_generator.py  main.cpp
includes/: AST_Function.h  AST_Types.h  Memory.cpp  Memory.h  Variable.h  bytestream.cpp  bytestream.h  compiler.cpp  compiler.h  constants.h  function.cpp  function.h  instruction.h  instructions.h  lexer.cpp  lexer.h  module.cpp  module.h  opcodes.h  parser.cpp  parser.h  stack.cpp  stack.h  token.h  variable.cpp  variable.h  variabletype.h
test-bytestream/: Makefile  main.cpp
test-cf/: Makefile  code.wasm  code.wat  example.js  main.cpp  script.js  url.txt
test-cf/build_edge/: test.js  test.wasm
test-cf/build_test/: test.html  test.js  test.wasm
test-cf/vm-worker/: code.wasm  index.js  package-lock.json  package.json  webpack.config.js  wrangler.toml
test-compiler/: Makefile  main.cpp
test-module/: Makefile  main.cpp  test.wasm  test.wat
tested-examples/: if-else-with-result.wat  if-else.wat  import-memory.wat  loop.wat  memory.wat  multiple-blocks.wat  recursive-faculty.wat
